--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "registro",
-    "slug": "registro",
+    "name": "ejemplos-193",
+    "slug": "ejemplos-193",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
